--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -119,15 +119,17 @@
     <string name="primary_color">Primäre Farbe</string>
     <string name="restore_defaults">Standard wiederherstellen</string>
     <string name="theme">Thema</string>
-    <string name="light_theme">Helles Thema</string>
-    <string name="dark_theme">Dunkles Thema</string>
-    <string name="custom">Benutzerdefiniert</string>
     <string name="changing_color_description">Ändern einer Farbe setzt das Thema auf "Benutzerdefiniert"</string>
     <string name="save">Speichern</string>
     <string name="discard">Verwerfen</string>
     <string name="undo_changes">Änderungen verwerfen</string>
     <string name="undo_changes_confirmation">Bist du sicher, dass du die Änderungen verwerfen willst?</string>
     <string name="save_before_closing">Du hast ungespeicherte Änderungen. Speichern vorm Beenden?</string>
+
+    <!-- Themes -->
+    <string name="light_theme">Helles Thema</string>
+    <string name="dark_theme">Dunkles Thema</string>
+    <string name="custom">Benutzerdefiniert</string>
 
     <!-- What's new -->
     <string name="whats_new">Neue Funktionen</string>
