--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -119,15 +119,17 @@
     <string name="primary_color">主体色</string>
     <string name="restore_defaults">恢复默认</string>
     <string name="theme">主题</string>
-    <string name="light_theme">浅色主题</string>
-    <string name="dark_theme">深色主题</string>
-    <string name="custom">自定义</string>
     <string name="changing_color_description">更改颜色将切换到自定义主题</string>
     <string name="save">保存</string>
     <string name="discard">丢弃</string>
     <string name="undo_changes">撤销更改</string>
     <string name="undo_changes_confirmation">是否撤销您的更改？</string>
     <string name="save_before_closing">您尚未保存更改，是否保存？</string>
+
+    <!-- Themes -->
+    <string name="light_theme">浅色主题</string>
+    <string name="dark_theme">深色主题</string>
+    <string name="custom">自定义</string>
 
     <!-- What's new -->
     <string name="whats_new">更新日志</string>
