--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -119,15 +119,17 @@
     <string name="primary_color">Primary color</string>
     <string name="restore_defaults">Restore defaults</string>
     <string name="theme">Theme</string>
-    <string name="light_theme">Light theme</string>
-    <string name="dark_theme">Dark theme</string>
-    <string name="custom">Custom</string>
     <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
     <string name="save">Save</string>
     <string name="discard">Discard</string>
     <string name="undo_changes">Undo changes</string>
     <string name="undo_changes_confirmation">Are you sure you want to undo your changes?</string>
     <string name="save_before_closing">You have unsaved changes. Save before exit?</string>
+
+    <!-- Themes -->
+    <string name="light_theme">Light theme</string>
+    <string name="dark_theme">Dark theme</string>
+    <string name="custom">Custom</string>
 
     <!-- What's new -->
     <string name="whats_new">What\'s new</string>
