--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">Máte neuložené změny. Uložit před zavřením?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Světlý motiv</string>
-    <string name="dark_theme">Tmavý motiv</string>
+    <string name="light_theme">Světlý</string>
+    <string name="dark_theme">Tmavý</string>
+    <string name="solarized">Solarizovaná</string>
     <string name="custom">Vlastní</string>
 
     <!-- What's new -->
