--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">Hai modifiche non salvate. Salvare prima di uscire?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Tema chiaro</string>
-    <string name="dark_theme">Tema scuro</string>
+    <string name="light_theme">Chiaro</string>
+    <string name="dark_theme">Scuro</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Personale</string>
 
     <!-- What's new -->
