--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -129,6 +129,7 @@
     <!-- Themes -->
     <string name="light_theme">ライト</string>
     <string name="dark_theme">ダーク</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">カスタム</string>
 
     <!-- What's new -->
