--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">You have unsaved changes. Save before exit?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Lyst tema</string>
-    <string name="dark_theme">Mørkt tema</string>
+    <string name="light_theme">Lyst</string>
+    <string name="dark_theme">Mørkt</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Tilpasset</string>
 
     <!-- What's new -->
