--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">Onopgeslagen wijzigingen. Nu opslaan?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Licht thema</string>
-    <string name="dark_theme">Donker thema</string>
+    <string name="light_theme">Licht</string>
+    <string name="dark_theme">Donker</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Aangepast</string>
 
     <!-- What's new -->
