--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">У вас есть несохранённые изменения. Сохранить перед выходом?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Светлая тема</string>
-    <string name="dark_theme">Тёмная тема</string>
+    <string name="light_theme">Светлая</string>
+    <string name="dark_theme">Тёмная</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Настраиваемое</string>
 
     <!-- What's new -->
