--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -128,8 +128,9 @@
     <string name="save_before_closing">Máte neuložené zmeny. Chcete ich uložiť pred ukončením?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Svetlá téma</string>
-    <string name="dark_theme">Tmavá téma</string>
+    <string name="light_theme">Svetlá</string>
+    <string name="dark_theme">Tmavá</string>
+    <string name="solarized">Solarizovaná</string>
     <string name="custom">Vlastná</string>
 
     <!-- What's new -->
