--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">Kaydedilmemiş değişiklikleriniz var. Çıkmadan önce kaydet?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Hafif tema</string>
-    <string name="dark_theme">Koyu tema</string>
+    <string name="light_theme">Hafif</string>
+    <string name="dark_theme">Koyu</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Özel</string>
 
     <!-- What's new -->
