--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">You have unsaved changes. Save before exit?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Light theme</string>
-    <string name="dark_theme">Dark theme</string>
+    <string name="light_theme">Light</string>
+    <string name="dark_theme">Dark</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Custom</string>
 
     <!-- What's new -->
