--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">Du hast ungespeicherte Änderungen. Speichern vorm Beenden?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Helles Thema</string>
-    <string name="dark_theme">Dunkles Thema</string>
+    <string name="light_theme">Helles</string>
+    <string name="dark_theme">Dunkles</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Benutzerdefiniert</string>
 
     <!-- What's new -->
