--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">Tiene cambios sin aplicar. ¿Guardar antes de salir?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Tema claro</string>
-    <string name="dark_theme">Tema oscuro</string>
+    <string name="light_theme">Claro</string>
+    <string name="dark_theme">Oscuro</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Personalizado</string>
 
     <!-- What's new -->
