--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">Turite neiðsaugotø pakeitimø. Iðsaugoti prieð iðeinant?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Ðviesi tema</string>
-    <string name="dark_theme">Tamsi tema</string>
+    <string name="light_theme">Ðviesi</string>
+    <string name="dark_theme">Tamsi</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Pasirinktinë</string>
 
     <!-- What's new -->
