--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -130,6 +130,7 @@
     <!-- Themes -->
     <string name="light_theme">Jasny</string>
     <string name="dark_theme">Ciemny</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Własny</string>
 
     <!-- What's new -->
