--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">Existem alterações não guardadas. Deseja guardar antes de sair?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Tema claro</string>
-    <string name="dark_theme">Tema escuro</string>
+    <string name="light_theme">Claro</string>
+    <string name="dark_theme">Escuro</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Personalizado</string>
 
     <!-- What's new -->
