--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -127,8 +127,9 @@
     <string name="save_before_closing">Du har ändringar som inte är sparade. Spara innan du lämnar?</string>
 
     <!-- Themes -->
-    <string name="light_theme">Ljust tema</string>
-    <string name="dark_theme">Mörkt tema</string>
+    <string name="light_theme">Ljust</string>
+    <string name="dark_theme">Mörkt</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">Anpassat tema</string>
 
     <!-- What's new -->
