--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -129,6 +129,7 @@
     <!-- Themes -->
     <string name="light_theme">浅色主题</string>
     <string name="dark_theme">深色主题</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">自定义</string>
 
     <!-- What's new -->
