--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -129,6 +129,7 @@
     <!-- Themes -->
     <string name="light_theme">明亮主題</string>
     <string name="dark_theme">灰暗主題</string>
+    <string name="solarized">Solarized</string>
     <string name="custom">自訂</string>
 
     <!-- What's new -->
