adding a Dark Red predefined theme

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">Světlý</string>
     <string name="dark_theme">Tmavý</string>
     <string name="solarized">Solarizovaná</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Vlastní</string>
 
     <!-- What's new -->
