--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">Helles</string>
     <string name="dark_theme">Dunkles</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Benutzerdefiniert</string>
 
     <!-- What's new -->
