--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">Lumineux</string>
     <string name="dark_theme">Sombre</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Personnalisé</string>
 
     <!-- What's new -->
