--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">Ðviesi</string>
     <string name="dark_theme">Tamsi</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Pasirinktinë</string>
 
     <!-- What's new -->
