--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -131,6 +131,7 @@
     <string name="light_theme">Jasny</string>
     <string name="dark_theme">Ciemny</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Własny</string>
 
     <!-- What's new -->
