--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -131,6 +131,7 @@
     <string name="light_theme">Svetlá</string>
     <string name="dark_theme">Tmavá</string>
     <string name="solarized">Solarizovaná</string>
+    <string name="dark_red">Tmavo červená</string>
     <string name="custom">Vlastná</string>
 
     <!-- What's new -->
