--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">Ljust</string>
     <string name="dark_theme">Mörkt</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Anpassat tema</string>
 
     <!-- What's new -->
