--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">Light</string>
     <string name="dark_theme">Dark</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Custom</string>
 
     <!-- What's new -->
