--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">Chiaro</string>
     <string name="dark_theme">Scuro</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Personale</string>
 
     <!-- What's new -->
