--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">ライト</string>
     <string name="dark_theme">ダーク</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">カスタム</string>
 
     <!-- What's new -->
