--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">Lyst</string>
     <string name="dark_theme">Mørkt</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Tilpasset</string>
 
     <!-- What's new -->
