--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">Licht</string>
     <string name="dark_theme">Donker</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Aangepast</string>
 
     <!-- What's new -->
