--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">Hafif</string>
     <string name="dark_theme">Koyu</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">Özel</string>
 
     <!-- What's new -->
