--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -130,6 +130,7 @@
     <string name="light_theme">浅色主题</string>
     <string name="dark_theme">深色主题</string>
     <string name="solarized">Solarized</string>
+    <string name="dark_red">Dark red</string>
     <string name="custom">自定义</string>
 
     <!-- What's new -->
