--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -125,6 +125,7 @@
     <string name="undo_changes">Deshacer cambios</string>
     <string name="undo_changes_confirmation">¿Seguro que quiere deshacer los cambios?</string>
     <string name="save_before_closing">Tiene cambios sin aplicar. ¿Guardar antes de salir?</string>
+    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
 
     <!-- Themes -->
     <string name="light_theme">Claro</string>
