--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -125,6 +125,7 @@
     <string name="undo_changes">Annulla modifiche</string>
     <string name="undo_changes_confirmation">Sei sicuro di annullare le tue modifiche?</string>
     <string name="save_before_closing">Hai modifiche non salvate. Salvare prima di uscire?</string>
+    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
 
     <!-- Themes -->
     <string name="light_theme">Chiaro</string>
