--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -132,6 +132,7 @@
     <string name="solarized">Solarized</string>
     <string name="dark_red">Dark red</string>
     <string name="custom">カスタム</string>
+    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
 
     <!-- What's new -->
     <string name="whats_new">更新内容</string>
