--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -126,6 +126,7 @@
     <string name="undo_changes">Vrátiť zmeny</string>
     <string name="undo_changes_confirmation">Ste si istý, že chcete vrátiť zmeny?</string>
     <string name="save_before_closing">Máte neuložené zmeny. Chcete ich uložiť pred ukončením?</string>
+    <string name="apply_to_all_apps">Použiť farby na všetky Jednoduché Aplikácie</string>
 
     <!-- Themes -->
     <string name="light_theme">Svetlá</string>
