--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -125,6 +125,7 @@
     <string name="undo_changes">Ångra ändringar</string>
     <string name="undo_changes_confirmation">Är du säker på att du vill ångra dina ändringar?</string>
     <string name="save_before_closing">Du har ändringar som inte är sparade. Spara innan du lämnar?</string>
+    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
 
     <!-- Themes -->
     <string name="light_theme">Ljust</string>
