--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -125,6 +125,7 @@
     <string name="undo_changes">恢復更改</string>
     <string name="undo_changes_confirmation">確定要恢復變更嗎?</string>
     <string name="save_before_closing">尚未儲存變更。離開前是否儲存?</string>
+    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
 
     <!-- Themes -->
     <string name="light_theme">明亮主題</string>
