--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -125,6 +125,7 @@
     <string name="undo_changes">Vrátit změny zpět</string>
     <string name="undo_changes_confirmation">Opravdu chcete vrátit změny zpět?</string>
     <string name="save_before_closing">Máte neuložené změny. Uložit před zavřením?</string>
+    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
 
     <!-- Themes -->
     <string name="light_theme">Světlý</string>
