--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -125,6 +125,9 @@
     <string name="undo_changes">変更を元に戻す</string>
     <string name="undo_changes_confirmation">変更を元に戻してもよろしいですか?</string>
     <string name="save_before_closing">保存していない変更があります。保存しますか?</string>
+    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
+    <string name="share_colors_success">Colors updated successfully. A new Theme called \'Shared\' has been added, please use that for updating all app colors in the future.</string>
+    <string name="purchase_thank_you">Please purchase <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> to unlock this function and support the development. Thanks!</string>
 
     <!-- Themes -->
     <string name="light_theme">ライト</string>
@@ -132,7 +135,7 @@
     <string name="solarized">Solarized</string>
     <string name="dark_red">Dark red</string>
     <string name="custom">カスタム</string>
-    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
+    <string name="shared">Shared</string>
 
     <!-- What's new -->
     <string name="whats_new">更新内容</string>
