--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -127,6 +127,8 @@
     <string name="undo_changes_confirmation">Ste si istý, že chcete vrátiť zmeny?</string>
     <string name="save_before_closing">Máte neuložené zmeny. Chcete ich uložiť pred ukončením?</string>
     <string name="apply_to_all_apps">Použiť farby na všetky Jednoduché Aplikácie</string>
+    <string name="share_colors_success">Farby boli úspešne aktualizované. Bola pridaná nová \'Zdieľaná\' téma, prosím použite ju pri ďalšej úprave farieb.</string>
+    <string name="purchase_thank_you">Prosím zakúpte si <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Jednoduché ďakujem</a> na odomknutie tejto funkcie a podporu vývoja. Vďaka!</string>
 
     <!-- Themes -->
     <string name="light_theme">Svetlá</string>
@@ -134,6 +136,7 @@
     <string name="solarized">Solarizovaná</string>
     <string name="dark_red">Tmavo červená</string>
     <string name="custom">Vlastná</string>
+    <string name="shared">Zdieľaná</string>
 
     <!-- What's new -->
     <string name="whats_new">Novinky</string>
